src/test/deca/context/invalid/resultats/test_class_cast_incompatible-cont.res
./src/test/deca/context/invalid/test_class_cast_incompatible.deca:23:11: The types are incompatible for a cast 
